# tmux-status-line

./: Cargo.toml  com.fritiof.tmux-statusline.plist  default.env  default.nix  flake.nix
harvest/: Cargo.toml
harvest/src/: api.rs  lib.rs  widget.rs
src/: cache.rs  harvest.rs  lib.rs  main.rs  widget.rs
src/widgets/: battery.rs  harvest.rs  misc.rs  mod.rs
widget/: Cargo.toml
widget/src/: battery.rs  lib.rs  misc.rs  spotify.rs  widget.rs
