[package]
name = "tmux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["harvest"]
harvest = []

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.7.1"
tiny_http = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv_codegen = "0.15.0"
widget = { path = "./widget" } 
harvest = { path = "./harvest" } 

[workspace]
members = [
    "harvest",
    "widget",
]
